--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "node-pg-migrate": "^8.0.4",
+    "openai": "^6.15.0",
     "pg": "^8.16.3",
     "sharp": "^0.34.5"
   },
