--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "express-rate-limit": "^8.2.1",
     "node-pg-migrate": "^8.0.4",
     "openai": "^6.15.0",
     "pg": "^8.16.3",
