--- a/server/package.json
+++ b/server/package.json
@@ -14,10 +14,12 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@google-cloud/vision": "^5.3.4",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "express-rate-limit": "^8.2.1",
+    "multer": "^2.0.2",
     "node-pg-migrate": "^8.0.4",
     "openai": "^6.15.0",
     "pg": "^8.16.3",
